# JobSearchManager_API

./: .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: api.py  models.py  storage.py  utils.py
tests/: test_api.py  test_models.py  test_storage.py  test_utils.py
