[tool.poetry]
name = "hh-api"
version = "0.1.0"
description = "src/api.py: Contains classes for interacting with job vacancy APIs."
authors = ["main.py: Entry point for the application, handles user interaction."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
